# edu_fleet

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
docker/eduart-swarm/: Dockerfile  makefile
docker/ie_app/: eduard-blue-fleet-master.yaml  eduard-green-fleet-slave.yaml  eduard-red-fleet-slave.yaml
docker/image/: Dockerfile  makefile
docker/ipc127e/: Dockerfile  makefile
docker/leuze_safety_on_iot2050/: docker-compose.yaml
docker/leuze_safety_on_iot2050/launch_content/: collision_avoidance.launch.py
docker/master/: docker-compose.yaml
docker/master/launch_content/: eduard-fleet-drive-master.launch.py  eduard-fleet-drive-master.yaml
docker/sick_line_navigation_on_iot2050/: docker-compose.yaml  iot2050-sick-line-navigation.service
docker/sick_line_navigation_on_iot2050/launch_content/: sick-line-navigation.launch.py  sick_lidar_custom_reader.launch.py  sick_lidar_custom_reader.yaml  sick_line_controller.yaml  sick_line_navigation.yaml
docker/slave/: docker-compose.yaml
docker/slave/launch_content/: eduard-fleet-drive-slave.launch.py  eduard-fleet-drive-slave.yaml
documentation/formula/: fleet-to-robot-equation-system.py  fleet-to-robot-equation-system.tex  kalman-filter-model-mecanum-push-and-rotate.py  kalman-filter-model-mecanum-robot.py  kalman-filter-model-mecanum-rotate-and-push.py  kalman-filter-model-mecanum-sympy.py  kalman-filter-model-mecanum.tex  kalman-filter-model-skid.py  kalman-filter-model-skid.tex
documentation/formula/img/: draw_robot.tex  fleet_coordinate_systems.tex  push_and_rotate.tex  rotate_and_push.tex
edu_swarm/: edu_swarm_brain.py
include/edu_fleet/controller/: controller_interface.hpp  pid.hpp
include/edu_fleet/kalman_filter/: attribute.hpp  attribute_pack.hpp  attribute_vector.hpp  attribute_vector_plotter.hpp  extended_kalman_filter.hpp  filter_model.hpp  filter_model_mecanum.hpp  kalman_filter.hpp  observation_matrix_handler.hpp
include/edu_fleet/sensor_model/: message_converting.hpp  sensor_model.hpp  sensor_model_ros.hpp
include/edu_fleet/transform/: geometry.hpp
launch/: eduard-blue-fleet-drive-slave.py  eduard-blue-fleet-drive.py  eduard-fleet-drive-master.launch.py  eduard-fleet-drive-master.py  eduard-fleet-drive-slave.launch.py  eduard-fleet-drive.launch.py  eduard-fleet-drive.py  eduard-green-fleet-drive-slave.launch.py  eduard-green-fleet-drive-slave.py  eduard-green-fleet-drive.py  eduard-red-fleet-drive-slave.launch.py  eduard-red-fleet-drive.py  line-controller.launch.py  qr_code_following.launch.py  robot-localization.launch.py  sick-line-navigation.launch.py
parameter/: eduard-blue-fleet-drive-slave.yaml  eduard-blue-fleet-drive.yaml  eduard-fleet-drive-master.yaml  eduard-green-fleet-drive-slave.yaml  eduard-green-fleet-drive.yaml  eduard-red-fleet-drive-slave.yaml  sick_line_controller.yaml  sick_line_navigation.yaml
parameter/qr_code_following/: camera.yaml  camera_calibration.yaml  collsion_avoidance.yaml  marker_pose_estimation.yaml  pose_control.yaml  robot_localization.yaml
src/lib/: CMakeLists.txt
src/lib/controller/: CMakeLists.txt  pid.cpp
src/lib/kalman_filter/: CMakeLists.txt  extended_kalman_filter.cpp  filter_model_mecanum.cpp  kalman_filter.cpp  observation_matrix_handler.cpp
src/lib/sensor_model/: CMakeLists.txt  message_converting.cpp  sensor_model.cpp
src/lib/transform/: CMakeLists.txt  geometry.cpp
src/node/: CMakeLists.txt  angle.hpp  collision_avoidance_lidar_field_node.cpp  collision_avoidance_lidar_field_node.hpp  collision_avoidance_lidar_node.cpp  collision_avoidance_lidar_node.hpp  fleet-control-node.cpp  fleet-control-node.hpp  fleet_control_node.cpp  fleet_control_node.hpp  fleet_localization_node.cpp  fleet_localization_node.hpp  line_controller_node.cpp  line_controller_node.hpp  pid_controller.cpp  pid_controller.hpp  pose_controller_node.cpp  pose_controller_node.hpp  robot_localization_node.cpp  robot_localization_node.hpp  sick_line_controller_node.cpp  sick_line_controller_node.hpp  sick_line_navigation_node.cpp  sick_line_navigation_node.hpp  twist_accumulator.cpp  twist_accumulator.hpp
src/test/: CMakeLists.txt  componenttest_fleet_localization.py  unittest_attribute_vector.cpp  unittest_extended_kalman_filter.cpp  unittest_kalman_filter_model_mecanum.cpp  unittest_observation_matrix.cpp  unittest_sensor_model.cpp
src/test/analysis_scripts/: plot_covariance.py  plot_kalman_filter_model.py
srv/: GetTransform.srv
